# blog-rs

./: Cargo.toml  README.md  cliff.toml  deny.toml  env.example
config/: base.yaml
migrations/: 20241213075703_create_posts_table.down.sql  20241213075703_create_posts_table.up.sql  20241225030429_create_users_table.up.sql  20241227093256_create_casbin_rule_table.down.sql
scripts/: init_db.sh
src/: config.rs  lib.rs  logger.rs  main.rs
src/domain/blog/: error.rs  ports.rs  service.rs
src/domain/blog/models/: posts.rs  users.rs
src/inbound/http/: http_server.rs  mod.rs  response.rs
src/inbound/http/handlers/: batch_delete_post.rs  create_post.rs  create_user.rs  delete_post.rs  delete_user.rs  get_user.rs  list_post.rs  login.rs  mod.rs  update_post.rs
src/inbound/http/middlewares/: auth.rs  permission.rs
src/outbound/db/: blog.rs  mod.rs  postgres.rs  posts.rs  users.rs
src/utils/: error.rs  jwt.rs  mod.rs  password_hash.rs
