[package]
name = "blog-rs"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[[bin]]
name = "blog"
path = "src/bin/server/main.rs"


[dependencies]
anyhow = "1.0.94"
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.83"
axum = { version = "0.7.9", features = ["macros", "tracing"] }
chrono = { version = "0.4.39", features = ["serde"] }
config = "0.14.1"
derive_more = { version = "1.0.0", features = ["from"] }
jsonwebtoken = "9.3.0"
rand = { version = "0.8.5", features = ["std_rng"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
serde_variant = "0.1.3"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "uuid",
    "migrate",
    "chrono",
] }
sqlx-adapter = { version = "1.6.0", features = ["postgres", "runtime-tokio"] }
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.2", features = ["add-extension", "trace"] }
tower-layer = "0.3.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
validator = { version = "0.19.0", features = ["derive"] }
